table td th contrast fix

--- a/src/utilities/_accessibility-helpers.scss
+++ b/src/utilities/_accessibility-helpers.scss
@@ -15,6 +15,9 @@
 	h6,
 	time,
 	address,
+	table,
+	td,
+	th,
 	li,
 	dd,
 	dt,
